force-app/main/default/objects/GBLite__GB_Load_Cache__c/fields/GBLite__Grid__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid__c</fullName>
    <description>Name of the grid this cache holds data for.</description>
    <label>Grid</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>