force-app/main/default/objects/GBLite__GB_Load_Cache__c/fields/GBLite__Ids_Set1__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Ids_Set1__c</fullName>
    <description>First set of 1000 fields.</description>
    <label>Ids Set1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>