force-app/main/default/objects/GBLite__GB_Load_Cache__c/fields/GBLite__Ids_Set2__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Ids_Set2__c</fullName>
    <description>Next set of 1000 fields.</description>
    <label>Ids Set2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>